--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "griddb-node-api": "^0.8.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
