Set node engine version

--- a/ui/package.json
+++ b/ui/package.json
@@ -27,5 +27,8 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
+  },
+  "engines": {
+    "node": "18.16.0"
   }
 }
