--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,10 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "content generation server"
+  ],
+  "author": "Equan P.",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -18,5 +20,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": "18.16.0"
   }
 }
