--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "griddb-node-api": "^0.8.6"
+    "griddb-node-api": "^0.8.6",
+    "openai": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
